--- a/.env.development.sample
+++ b/.env.development.sample
@@ -1,5 +1,5 @@
 PROJECT_ENV="development"
-DATABASE_URl="nothing::here"
+DATABASE_URL="postgres://localhost/outpayment_development"
 
 LOGGER_JSON_FORMATTER="false"
 LOGGER_LEVEl="info"
