--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 PROJECT_ENV="test"
-DATABASE_URl="nothing::here"
+DATABASE_URL="postgres://localhost/outpayment_test"
 
 LOGGER_JSON_FORMATTER="false"
 LOGGER_LEVEl="info"
