Implement rabbitmq transport

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 PROJECT_ENV="test"
+PROJECT_APPS='http,rabbitmq'
 DATABASE_URL="postgres://localhost/outpayment_test"
 
 LOGGER_JSON_FORMATTER="false"
