--- a/.env.development.sample
+++ b/.env.development.sample
@@ -1,5 +1,8 @@
 PROJECT_ENV="development"
+PROJECT_APPS='http,rabbitmq'
 DATABASE_URL="postgres://localhost/outpayment_development"
 
 LOGGER_JSON_FORMATTER="false"
 LOGGER_LEVEl="info"
+
+RABBITMQ_URL='nil'
